- Layout   * little changes in phrase to show for principal page at     frontend page
- Partial
  * little changes in html structure

- Locales
  * added translation for menu in frontend place

--- a/app/views/layouts/front-page.html.erb
+++ b/app/views/layouts/front-page.html.erb
@@ -8,7 +8,7 @@
           <% if logged_in? %>
           <%= render :partial => 'shared/menu' %>
           <% else %>
-          <%= content_tag(:div, content_tag(link_to(t('menu.login'), new_session_path)), :id => 'options') %>
+          <%= content_tag(:div, content_tag(link_to(t('menu.home'), new_session_path)), :id => 'options') %>
           <%= front_end_pages %>
           <% end %>
         </div>
