- Controller   * added private method to delete all chached pages     when a user is going out of the applicaction
- Partial
  * return to cache the menu partial

--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,3 +1,5 @@
+<% cache(:fragment => "shared/_new_menu") do %>
+
 <div id="menu">
   <div id="marco">
 
@@ -196,4 +198,4 @@
 
 </div>
 </div>
-
+<% end %>
