- Partial   * little change in email field   * delete lines to do cacheable the menu application
- View
  * added advice

- Locales
  * added translations

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -39,8 +39,8 @@
      <%= f.text_field :fax %>
     </p>
     <p>
-     <%= t('company.email') %><br />
-     <%= f.text_field :email, :value => 'without@email.com' %>
+     <%= t('company.email') %>***<br />
+     <%= f.text_field :email %>
     </p>
 
     <% if action_name == 'new' %>
