--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -5,6 +5,8 @@
   * <%= t('help_phrases.msg_text') %>
   <%= content_tag('br') %>
   ** <%= t('help_phrases.msg_number') %>
+  <%= content_tag('br') %>
+  *** <%= t('help_phrases.msg_email') %>
 <% end %>
 
 <%= link_to t('common_actions.back'), companies_path %>
