- Controllers   * little changes in application controller   * added new method 'inventory_number' to get data from     an specific screen device
- Partials
  * added div in form partial to show info about the screen
   device
  * added new partial to replace info of a screen device

- View
  * adde new observer field to show info about screen devices

--- a/app/views/workstations/new.html.erb
+++ b/app/views/workstations/new.html.erb
@@ -3,4 +3,12 @@
 <%= observe_field("places", :update => "outer",
 :url => { :controller => 'workstations', :action => :new },
 :with => "'place_id='+value") %>
+
+
+<%= observe_field "workstation_screen_id", :update => "inventory_number",
+:with => "workstation_screen_id", :url => { :controller => "workstations",
+:action => "inventory_number" } %>
+
+
 <%= link_to t('common_actions.back'), workstations_path %>
+
