--- a/app/views/workstations/_form.html.erb
+++ b/app/views/workstations/_form.html.erb
@@ -54,6 +54,8 @@
 
       <% end %>
     <% end %>
+    <div id="inventory_number">
+    </div>
 
 
     <% content_tag :td, option = {:valign =>'top'} do %>
