- Controller   * changed the name of one method and added a new     method called registers_code_printer
- Partials
  * added new div with id 'registers_code_printer' in
    form partial
  * added partial to show data about each printer selected
  * added logic in partials to solve problem if the register is
    nil

- View
  * added new observer field

--- a/app/views/workstations/_form.html.erb
+++ b/app/views/workstations/_form.html.erb
@@ -54,7 +54,7 @@
 
       <% end %>
     <% end %>
-    <div id="inventory_number">
+    <div id="registers_code_screen">
     </div>
 
 
@@ -66,6 +66,9 @@
           {:prompt => true, :size => @printers.count + 1 } %>
       <% end %>
     <% end %>
+
+    <div id="registers_code_printer">
+    </div>
 
   <% end %>
 <% end %>
