- Controller   * added call to logger
- Helpers
  * added new method to show the log file formatted

- Partials
  * added option of hitorical for users

- View
  * refactoring

- Locales
  * added translation for new menu option

- Css
  * added new classes

--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -157,6 +157,7 @@
         <ul class="sub">
           <li><a href="/users/list"><%= t 'menu.users_list' %></a></li>
           <li><a href="/signup"><%= t 'menu.new_account' %></a></li>
+          <li><a href="/users/history"><%= t 'menu.users_history' %></a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
