--- a/app/views/users/history.html.erb
+++ b/app/views/users/history.html.erb
@@ -1,11 +1,1 @@
-<%
-  File.open("#{RAILS_ROOT}" + '/log/audit.log') do |file|
-  file.each_line { |line|
-%>
-
-<%= content_tag('div', line)%>
-
-<%
-}
-end
-%>
+<%= action %>
