--- a/app/views/computers/index.html.erb
+++ b/app/views/computers/index.html.erb
@@ -13,3 +13,7 @@
 <%= content_tag('br') %>
 
 <%= link_to t('computers.new'), new_computer_path %>
+
+<%= content_tag('br') %>
+
+<%= render :partial => 'hotkeys' %>
