--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -11,7 +11,7 @@
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
-          <li><a href="/workstations"><%= t 'menu.list_workstations' %></a></li>
+          <li><a href="/workstations" accesskey='1'><%= t 'menu.list_workstations' %></a></li>
           <li><a href="/workstations/new"><%= t 'menu.new' %></a></li>
           <li><a href="/workstations/stats"><%= t 'menu.stats_workstations' %></a></li>
         </ul>
@@ -25,7 +25,7 @@
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
-          <li><a href="/places"><%= t 'menu.list_places' %></a></li>
+          <li><a href="/places" accesskey='2'><%= t 'menu.list_places' %></a></li>
           <li><a href="/places/new"><%= t 'menu.new_place' %></a></li>
           <li><a href="/places/stats"><%= t 'menu.stats_places' %></a></li>
         </ul>
@@ -39,7 +39,7 @@
         <ul class="sub">
           <li><a href="/computers"  class="fly"><%= t 'menu.computers' %></a>
             <ul>
-              <li><a href="/computers"  class="fly"><%= t 'menu.list_computers' %></a>
+              <li><a href="/computers"  class="fly" accesskey='0'><%= t 'menu.list_computers' %></a>
               <li><a href="/computers/available"><%= t 'menu.availables_computers' %></a></li>
               <li><a href="/computers/unavailable"><%= t 'menu.unavailables_computers' %></a></li>
               <li><a href="/computers/stats"><%= t 'menu.stats_computers' %></a></li>
