--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -682,6 +682,12 @@ color: red;
     background-color: #F1F1F1;
 }
 
+.background_hotkeys
+{
+    background-color: #FAFAFA;
+    width: 50%;
+}
+
 
 /* FRONT END PAGE */
 
