--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -11,7 +11,7 @@
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
-          <li><a href="/workstations" accesskey='1'><%= t 'menu.list_workstations' %></a></li>
+          <li><a href="/workstations" accesskey='w'><%= t 'menu.list_workstations' %></a></li>
           <li><a href="/workstations/new"><%= t 'menu.new' %></a></li>
           <li><a href="/workstations/stats"><%= t 'menu.stats_workstations' %></a></li>
         </ul>
@@ -25,7 +25,7 @@
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
-          <li><a href="/places" accesskey='2'><%= t 'menu.list_places' %></a></li>
+          <li><a href="/places" accesskey='p'><%= t 'menu.list_places' %></a></li>
           <li><a href="/places/new"><%= t 'menu.new_place' %></a></li>
           <li><a href="/places/stats"><%= t 'menu.stats_places' %></a></li>
         </ul>
@@ -39,7 +39,7 @@
         <ul class="sub">
           <li><a href="/computers"  class="fly"><%= t 'menu.computers' %></a>
             <ul>
-              <li><a href="/computers"  class="fly" accesskey='0'><%= t 'menu.list_computers' %></a>
+              <li><a href="/computers"  class="fly" accesskey='c'><%= t 'menu.list_computers' %></a>
               <li><a href="/computers/available"><%= t 'menu.availables_computers' %></a></li>
               <li><a href="/computers/unavailable"><%= t 'menu.unavailables_computers' %></a></li>
               <li><a href="/computers/stats"><%= t 'menu.stats_computers' %></a></li>
@@ -98,7 +98,7 @@
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
-              <li><a href="/marks"><%= t 'menu.list_marks' %></a></li>
+              <li><a href="/marks"  accesskey='s'><%= t 'menu.list_marks' %></a></li>
               <li><a href="/marks/new"><%= t 'menu.new_mark' %></a></li>
 
               <li><a href="/models" class="fly"><%= t 'menu.models' %></a>
@@ -117,7 +117,7 @@
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
-          <li><a href="/companies/"><%= t 'menu.list_companies' %></a></li>
+          <li><a href="/companies/"  accesskey='f'><%= t 'menu.list_companies' %></a></li>
           <li><a href="/companies/new"><%= t 'menu.company_new' %></a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
@@ -129,7 +129,7 @@
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
-          <li><a href="/bills/"><%= t 'menu.bills' %></a></li>
+          <li><a href="/bills/"  accesskey='b'><%= t 'menu.bills' %></a></li>
           <li><a href="/bills/new"><%= t 'menu.bill_new' %></a></li>
           <li><a href="/bills/stats"><%= t 'menu.stats_places' %></a></li>
         </ul>
@@ -172,7 +172,7 @@
       </li>
 
       <li class="top">
-        <a href="/users/help" id="telmex" class="top_link">
+        <a href="/users/help" id="telmex" class="top_link"  accesskey='1'>
           <span class="down">Help</span>
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
@@ -180,7 +180,7 @@
       </li>
 
       <li class="top">
-        <a href="/logout" id="telmex" class="top_link">
+        <a href="/logout" id="telmex" class="top_link"   accesskey='l'>
           <span class="down"><%= t 'menu.logout' %></span>
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
       </li>
