- Partial   * added reference to hot-keys advice

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,10 @@
 <% cache(:fragment => "shared/_footer") do %>
+
 <div id="footer">
-  <p>Developer: <a href="http://www.cesardiaz.com.ar">Cesar Diaz</a></p>
+  <a href="/users/help#shortcuts">Hot-Keys</a>
+  <p>
+    Developer: <a href="http://www.cesardiaz.com.ar">Cesar Diaz</a>
+  </p>
 </div>
 <% end %>
 
