- Partials   * changes in display of hotkeys   * added logic in footer partial
- View
  * little change

- Styles
  * little change in font size of hotkeys

--- a/app/views/computers/index.html.erb
+++ b/app/views/computers/index.html.erb
@@ -14,6 +14,6 @@
 
 <%= link_to t('computers.new'), new_computer_path %>
 
-<%= content_tag('br') %>
+<%= content_tag('p') %>
 
 <%= render :partial => 'hotkeys' %>
