--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,9 @@
 <% cache(:fragment => "shared/_footer") do %>
 
 <div id="footer">
+  <% if logged_in? %>
   <a href="/users/help#shortcuts">Hot-Keys</a>
+  <% end %>
   <p>
     Developer: <a href="http://www.cesardiaz.com.ar">Cesar Diaz</a>
   </p>
