--- a/app/views/computers/_hotkeys.html.erb
+++ b/app/views/computers/_hotkeys.html.erb
@@ -1,8 +1,5 @@
-<% content_tag :p, options = {:class => 'background_hotkeys'} do %>
+<%= content_tag('div','HotKeys:', :class => 'background_hotkeys') %>
+<%= content_tag('div','Alt-Shift-N go to search by Name', :class => 'background_hotkeys') %>
+<%= content_tag('div','Alt-Shift-M go to search by Mac', :class => 'background_hotkeys') %>
+<%= content_tag('div','Alt-Shift-I go to search by Ip', :class => 'background_hotkeys') %>
 
-<%= content_tag('p','HotKeys:') %>
-<%= content_tag('div','Alt-Shift-N go to search by Name') %>
-<%= content_tag('div','Alt-Shift-M go to search by Mac') %>
-<%= content_tag('div','Alt-Shift-I go to search by Ip') %>
-
-<% end %>
