--- a/app/views/computers/index.html.erb
+++ b/app/views/computers/index.html.erb
@@ -12,7 +12,7 @@
 
 <%= content_tag('br') %>
 
-<%= link_to t('computers.new'), new_computer_path %>
+<%= link_to t('computers.new'), new_computer_path, :tabindex => '7' %>
 
 <%= content_tag('p') %>
 
