--- a/app/views/computers/_search.html.erb
+++ b/app/views/computers/_search.html.erb
@@ -22,21 +22,21 @@
        <% content_tag :tr do %>
          <%= content_tag('td', t('computers.name')) %>
          <%= content_tag('td',text_field_with_auto_complete(:computer, :name, {:size => 20, :accesskey => 'n', :tabindex => '1'}, {:method => :get})) %>
-         <%= content_tag('td', submit_tag(t('search.label'))) %>
+         <%= content_tag('td', submit_tag(t('search.label')), :tabindex => '2') %>
        <% end %>
      <% end %>
      <% content_tag :tr do %>
        <% form_tag :action => 'search' do %>
          <%= content_tag('td', 'Ip:') %>
-         <%= content_tag('td',text_field_with_auto_complete(:computer, :ip, {:size => 20, :accesskey => 'i', :tabindex => '2'}, {:method => :get})) %>
-         <%= content_tag('td', submit_tag(t('search.label'))) %>
+         <%= content_tag('td',text_field_with_auto_complete(:computer, :ip, {:size => 20, :accesskey => 'i', :tabindex => '3'}, {:method => :get})) %>
+         <%= content_tag('td', submit_tag(t('search.label')), :tabindex => '4') %>
        <% end %>
      <% end %>
        <% content_tag :tr do %>
          <% form_tag :action => 'search' do %>
            <%= content_tag('td', 'Mac:') %>
-           <%= content_tag('td',text_field_with_auto_complete(:computer, :mac, {:size => 20, :accesskey => 'm', :tabindex => '3'}, {:method => :get})) %>
-           <%= content_tag('td', submit_tag(t('search.label'))) %>
+           <%= content_tag('td',text_field_with_auto_complete(:computer, :mac, {:size => 20, :accesskey => 'm', :tabindex => '5'}, {:method => :get})) %>
+           <%= content_tag('td', submit_tag(t('search.label')), :tabindex => '6') %>
          <% end %>
        <% end %>
    <% end %>
