--- a/app/views/marks/_search.html.erb
+++ b/app/views/marks/_search.html.erb
@@ -8,7 +8,7 @@
     <% end %>
     <% content_tag :td do %>
        <%= text_field_with_auto_complete :mark, :name,
-           {:size => 20}, {:method => :get} %>
+           {:size => 20, :focus => true}, {:method => :get} %>
     <% end %>
     <% content_tag :td do %>
       <%= content_tag('td', submit_tag(t('search.label'))) %>
