--- a/app/views/places/_search.html.erb
+++ b/app/views/places/_search.html.erb
@@ -2,6 +2,6 @@
 <%= javascript_include_tag :defaults %>
 <% form_tag :action => 'search' do %>
 <label><%= t 'places.title' %></label>
-<%= text_field_with_auto_complete :place, :title, {:size => 20}, {:method => :get} %>
+<%= text_field_with_auto_complete :place, :title, {:size => 20, :focus => true}, {:method => :get} %>
 <%= submit_tag t 'search.label' %>
 <% end %>
