- Partials   * added focus at forms partials

--- a/app/views/computers/_form.html.erb
+++ b/app/views/computers/_form.html.erb
@@ -19,7 +19,7 @@
 
 
     <%= t('computers.name') %>
-    <%= f.text_field :name, :tabindex => '1' %>
+    <%= f.text_field :name, :tabindex => '1', :focus => true %>
 
     <% 2.times do %>
     <br>
