--- a/app/views/mother_boards/_form.html.erb
+++ b/app/views/mother_boards/_form.html.erb
@@ -16,7 +16,7 @@
 
 
   <%= t('motherboards.sn') %>
-  <%= f.text_field :serialnumber %>
+  <%= f.text_field :serialnumber, :focus => true %>
 
   <% 2.times do %>
   <br>
