--- a/app/views/printers/_form.html.erb
+++ b/app/views/printers/_form.html.erb
@@ -18,7 +18,7 @@
   <%= f.error_messages %>
 
   <%= t('printers.sn') %>
-  <%= f.text_field :serialnumber %>
+  <%= f.text_field :serialnumber, :focus => true %>
 
   <% 2.times do %>
   <br>
