--- a/app/views/dvds/_form.html.erb
+++ b/app/views/dvds/_form.html.erb
@@ -15,7 +15,7 @@
 <%= f.error_messages %>
 
 <%= t('dvds.sn') %>
-<%= f.text_field :serialnumber %>
+<%= f.text_field :serialnumber, :focus => true %>
 
 <% 2.times do %>
 <br>
