--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -5,7 +5,7 @@
 
   <% content_tag :p do %>
     <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.text_field :name, :focus => true  %>
   <% end %>
 
   <% content_tag :p do %>
