--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
   <%= error_messages_for :user %>
   <% form_for :user, :url => users_path do |f| -%>
   <p><%= label_tag 'login' %><br/>
-  <%= f.text_field :login %></p>
+  <%= f.text_field :login, :focus => true  %></p>
 
   <p><%= label_tag 'email' %><br/>
   <%= f.text_field :email %></p>
