- Partial   * added a little more of design
- Locales
  * added new translations

- Styles
  * added one class more for the front end loggin

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -739,6 +739,18 @@ color: red;
     padding: 1em;
 }
 
+
+.background_loggin
+{
+    border: 1px solid #660033;
+    background-color: #FFFFFF;
+    color: #fff;
+    width: 90%;
+    padding: 1em;
+}
+
+
+
 /* END FRONT PAGE  */
 .identation_help
 {
