--- a/app/views/workstations/edit.html.erb
+++ b/app/views/workstations/edit.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag "prototype" %>
+
 <% content_tag :table do %>
 
   <% content_tag :tr, :valign => 'top' do %>
@@ -18,14 +20,37 @@
           <%= content_tag('h3',t('menu.change_place')) %>
 
           <%= t('phrases.list_of') + t('menu.places') %>
-          <%= collection_select(:workstation, :place_id, Place.find(:all, :order => 'title'), :id, :title,{},
+          <%= collection_select(:workstation, :place_id,
+              Place.find(:all, :order => 'title'), :id, :title,{},
           {:prompt => true, :size => Place.all.count + 1 }) %>
+
+          <%= hidden_field(:before, :old_computer_id,
+              :value => @workstation.computer_id) %>
+
+          <%= hidden_field(:before, :old_screen_id,
+              :value => @workstation.screen_id) %>
+
+          <% if @workstation.printer_id.nil? %>
+              <%= hidden_field(:before, :old_printer_id,
+                  :value => 'nothing') %>
+          <% else %>
+              <%= hidden_field(:before, :old_printer_id,
+                  :value => @workstation.printer_id) %>
+          <% end %>
+
+
+           <div id="edit_workstation">
+           </div>
+
 
           <% if action_name == 'new' %>
              <%= f.submit t('workstations.create') %>
           <% else %>
              <%= f.submit t('workstations.edit') %>
           <% end %>
+
+
+
 
        <% end %>
 
@@ -37,3 +62,10 @@
 
 <%= link_to t('common_actions.show'), @workstation %> |
 <%= link_to t('common_actions.back'), workstations_path %>
+
+
+<%= observe_field("workstation_place_id", :update => "edit_workstation",
+:url => { :controller => 'workstations', :action => :devices_options },
+:with => "'place_id='+value") %>
+
+
